--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Tangerine', cursive;
-font-size: 42;
+font-size: 50;
 }
 
 div{
@@ -13,6 +13,7 @@ left: 0;
 width: 50%;
 height:50%;
 text-align: center;
+margin-top: 35%;
 }
 
 .center {
@@ -23,4 +24,12 @@ text-align: center;
 .center p {
 
     vertical-align: middle;
+}
+
+img {
+    display: block;
+    margin-top: 25%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 20%;
 }
