--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -1,6 +1,9 @@
 body{
     font-family: 'Tangerine', cursive;
 font-size: 50;
+margin:0;
+height:100%;
+overflow:hidden;
 }
 
 div{
@@ -13,7 +16,7 @@ left: 0;
 width: 50%;
 height:50%;
 text-align: center;
-margin-top: 30%;
+margin-top: 25%;
 }
 
 .center {
@@ -28,7 +31,7 @@ margin-top: 30%;
 
 img {
     display: block;
-    margin-top: 20%;
+    margin-top: 18%;
     margin-left: auto;
     margin-right: auto;
     width: 20%;
