--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -29,10 +29,19 @@ margin-top: 25%;
     vertical-align: middle;
 }
 
+p.meanwhile{
+    font-family: 'Raleway', sans-serif;
+    font-size: 12;}
+    
+p.copyrights{
+        font-family: 'Raleway', sans-serif;
+        font-size: 12;
+        font-weight: 100;
+}
 img {
     display: block;
     margin-top: 18%;
     margin-left: auto;
     margin-right: auto;
-    width: 20%;
+    width: 15%;
 }
