--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -6,18 +6,6 @@ height:100%;
 overflow:hidden;
 }
 
-div{
-  position: absolute;
-margin: auto;
-top: 0;
-right: 0;
-bottom: 0;
-left: 0;
-width: 50%;
-height:50%;
-text-align: center;
-margin-top: 25%;
-}
 
 .center {
     text-align: center;
@@ -38,10 +26,10 @@ p.copyrights{
         font-size: 12;
         font-weight: 100;
 }
-img {
-    display: block;
-    margin-top: 18%;
-    margin-left: auto;
-    margin-right: auto;
-    width: 15%;
-}
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 5px;
+  }
+ 
