--- a/HomeStyle.css
+++ b/HomeStyle.css
@@ -6,10 +6,10 @@ height:100%;
 overflow:hidden;
 }
 
-
 .center {
     text-align: center;
     vertical-align: middle;
+    margin-top: 10%;
 }
 
 .center p {
@@ -18,8 +18,18 @@ overflow:hidden;
 }
 
 p.meanwhile{
+    margin-top: 40%;
     font-family: 'Raleway', sans-serif;
-    font-size: 12;}
+    font-size: 12;
+}
+.clock {
+color: turquoise;
+text-align: center;
+    vertical-align: middle;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16;
+    margin-top: 7%;
+}
     
 p.copyrights{
         font-family: 'Raleway', sans-serif;
